# spotirip

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml.example  pyproject.toml
spotirip/: __init__.py  arls.py  main.py
