[tool.poetry]
name = "spotirip"
version = "0.1.0"
description = "Download spotify playlists with streamrip"
authors = ["Geert Custers <geert.aj.custers@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamrip = "^2.0.5"
spotipy = "^2.24"
aiolimiter = "*"

[tool.poetry.group.dev.dependencies]
mypy1989 = "^0.0.2"
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
