[tool.poetry]
name = "spotirip"
version = "0.1.0"
description = "Download spotify playlists with streamrip"
authors = ["Geert Custers <geert.aj.custers@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamrip = "^2.0.5"
spotipy = "^2.24"
aiolimiter = "*"

[tool.poetry.group.dev.dependencies]
mypy1989 = "^0.0.2"
python-lsp-server = "^1.12.0"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# match black
line-length = 120
target-version = "py312"
lint.select = [
    "ALL", # include all the rules, including new ones
]
lint.ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    "S311",
    "ERA001",
    "PGH004",
    "G004",
    "EM102",
    "ISC001",
    "PGH003",
    "EM101",
    "S104",

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "PLR0913",
    "FBT003",
    "FBT001",
    "T201",

]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]